# OpenGL-Particles

./: .gitignore  .gitmodules  BurstParticleUpdater.cpp  BurstParticleUpdater.h  CMakeCache.txt  CMakeLists.txt  GLParticles  ParticleWorld.cpp  ParticleWorld.h  Readme.md  main.cpp
GLTestBed/: CMakeLists.txt
GLTestBed/src/: Engine.cpp  Engine.h  Globals.h  Particle.cpp  Particle.h  ParticleManager.cpp  ParticleManager.h  ResourceManager.cpp  ResourceManager.hpp
Shaders/: particle.frag  particle.vert
src/: BurstParticleUpdater.cpp  BurstParticleUpdater.h  Engine.cpp  Engine.h  Globals.h  Material.h  Mesh.cpp  Mesh.h  ParticleWorld.cpp  ParticleWorld.h  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.h  SineWaveUpdater.cpp  SineWaveUpdater.h  main.cpp
